--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.16.13",
+    "express": "^4.17.1",
     "highcharts": "^9.2.2",
     "highcharts-react-official": "^3.0.0",
     "react": "^17.0.2",
